EXTRA_DIST = \
	all.xml \
	org.freedesktop.ModemManager.xml \
	mm-mobile-error.xml \
	org.freedesktop.ModemManager.Modem.xml \
	org.freedesktop.ModemManager.Modem.Cdma.xml \
	mm-modem-connect-error.xml \
	mm-modem-error.xml \
	org.freedesktop.ModemManager.Modem.Gsm.xml \
	org.freedesktop.ModemManager.Modem.Gsm.Card.xml \
	org.freedesktop.ModemManager.Modem.Gsm.Contacts.xml \
	org.freedesktop.ModemManager.Modem.Gsm.Hso.xml \
	org.freedesktop.ModemManager.Modem.Gsm.Network.xml \
	org.freedesktop.ModemManager.Modem.Gsm.SMS.xml \
	org.freedesktop.ModemManager.Modem.Simple.xml \
	mm-serial-error.xml \
	org.freedesktop.ModemManager.Modem.Location.xml \
	org.freedesktop.ModemManager.Modem.Gsm.Ussd.xml \
	org.freedesktop.DBus.Properties.xml
